fixes text overflowing todo-box

--- a/app/scss/_todo-list.scss
+++ b/app/scss/_todo-list.scss
@@ -34,6 +34,7 @@
     .todo-list__todo--text {
       //width: 75%;
       flex-grow: 2;
+      overflow: hidden;
       margin: 0;
       padding: 0;
       font-size: 1em;
